--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                     <img src="./images/userPhoto.avif" class="rounded" alt="user info ">
 
                 </div>
-                <div class=" col-12  col-lg-9   px-4 ">
+                <div class=" col-12  col-lg-9   px-4 px-lg-0 ">
                     <div class="wrapper row  rounded bg-body-secondary border">
                         <div class="bio col-md-8 col-lg-9 p-2 ">
                             <h6 class="fs-4"> Dr. Josef Rony </h6>
